Remove section header

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,7 +1,7 @@
 <div class="container about-content section-center">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center section-header">About</h2>
+            <h2 class="text-center">About</h2>
             <div class="container technical-skills mt-5"></div>
             <div class="row">
                 <div class="col-12 col-md-8 mx-auto mt-3">
