--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -2,7 +2,7 @@
 <div class="container contact-content section-center">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center section-header">Get in touch</h2>
+            <h2 class="text-center">Get in touch</h2>
             <div class="row">
                 <div class="col-12 col-md-4 order-2 order-sm-2 order-md-1 contact">
                     <div>
