--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,7 +23,6 @@ body{
     color: var(--f-col-light);
     min-height: 100vh;
     margin: 0 auto;
-    max-width: 1440px;
 }
 
 header{
@@ -31,7 +30,6 @@ header{
     top: 0;
     left: 0;
     min-height: 5vh;
-    max-width: 1440px;
     z-index: 99999;
     background-color: rgba(10, 3, 26, 0.9);
     backdrop-filter: blur(30px);
@@ -243,7 +241,7 @@ a{
 .message{
     display: block;
     position: absolute;
-    top: 15%;
+    top: 14vh;
     left: 50%;
     width: fit-content;
     height: fit-content;
@@ -280,9 +278,22 @@ a{
     background-color:var(--f-col-light);
 }
 
-@supports (scrollbar-color: red, blue){
+@supports (scrollbar-color: var(--f-col-grab), var(--f-col-dark)){
     *{
         scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
         scrollbar-width: thin;
+    }
+}
+
+@media (max-width:900px){
+    .message{
+        top: 12vh;
+        width:95%;
+    }
+    .contact-message{
+        background-color: var(--f-col-dark);
+        color: var(--f-col-light);
+        padding: 0.25rem;
+        border: 1.5px dashed var(--f-col-grab);
     }
 }
