--- a/home/static/css/contact.css
+++ b/home/static/css/contact.css
@@ -11,12 +11,14 @@
 }
 
 .back-to-top{
+    position: sticky;
+    bottom: 0;
+    display: flex;
     border-radius: 5px;
     width: fit-content;
     padding: 1rem;
     margin: 0.2rem;
     margin-left: auto;
-    display: flex;
     align-items: center;
     justify-content: center;
     background: rgba(237, 89, 89, 0.5);
