remove social links display on small scscreens

--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -4,12 +4,14 @@
             <p>Hello, my name is</p>
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
-                <div class="col-10 col-md-8 mb-5">
+                <div class="col-10 col-md-8">
                     <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that exhibits an amazing digital experience.</p>
                 </div>
             </div>
-            <a href="#projects" class="action-btn btn-hero">View my Projects</a>
-            <div class="hero-social-links"></div>
+            <div class="my-5">
+                <a href="#projects" class="action-btn btn-hero">View my Projects</a>
+            </div>
+            <div class="hero-social-links d-none d-md-block"></div>
         </div>
     </div>
 </div>
