restructure about section

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,17 +1,18 @@
 <div class="container about-content section-center">
     <div class="row">
-        <div class="col-12">
-            <h2 class="text-center">About</h2>
-            <div class="container technical-skills mt-5"></div>
-            <div class="row">
-                <div class="col-12 col-md-8 mx-auto mt-3">
-                    <p>Hello! My name is Folarin Ogungbemi, an aspiring full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
-                    <p>This inspiration led to my first encounter with HTML & CSS. I have since then endeavoured to learn more. So far, I have worked with a number of technologies to better my development.</p>
-                    <p>Currently, I am undergoing a diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a> where i specialize in building e-commerce websites and using relevant technologies to effeciently process and present data. I continually develop applications and learn new technologies with the aim to improve my skills and to provide solutions to organizational challenges.</p>
-                    <p>Find out more about me</p>
-                    <a class="nav-link action-btn" target="_blank" rel="noopener" href="#">Résumé</a>
-                </div>
-            </div>
+        <div class="col-12 order-1">
+            <h2 class="text-center my-5">About</h2>
+        </div>
+        <div class="col-12 order-3 order-md-2">
+            <span class="d-md-none">Technical skills:</span>
+            <div class="container technical-skills"></div>
+        </div>
+        <div class="col-12 col-md-8 mx-auto mt-3 order-2 order-md-3">
+            <p>Hello! My name is Folarin Ogungbemi, an aspiring full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
+            <p>This inspiration led to my first encounter with HTML & CSS. I have since then endeavoured to learn more. So far, I have worked with a number of technologies to better my development.</p>
+            <p>Currently, I am undergoing a diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a> where i specialize in building e-commerce websites and using relevant technologies to effeciently process and present data. I continually develop applications and learn new technologies with the aim to improve my skills and to provide solutions to organizational challenges.</p>
+            <span class="d-none d-md-block mb-3">Find out more about me</span>
+            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="#">Résumé</a>
         </div>
     </div>
 </div>
