--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-12 order-3 order-md-2">
             <span class="d-md-none">Technical skills:</span>
-            <div class="container technical-skills"></div>
+            <div class="container technical-skills mt-2"></div>
         </div>
         <div class="col-12 col-md-8 mx-auto mt-3 order-2 order-md-3">
             <p>Hello! My name is Folarin Ogungbemi, an aspiring full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
