--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,7 +42,7 @@ a{
 }
 
 .section-center{
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
