Add style to section head

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,7 +1,7 @@
 <div class="container about-content section-center">
     <div class="row">
         <div class="col-12 order-1">
-            <h2 class="text-center my-5">About</h2>
+            <h2 class="text-center section-head my-5">About Me</h2>
         </div>
         <div class="col-12 order-3 order-md-2">
             <span class="d-md-none">Technical skills:</span>
