--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -1,7 +1,7 @@
 <div class="container projects-content section-center">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center">Project</h2>
+            <h2 class="text-center section-head">Portfolio</h2>
             <div class="container projects mt-5"></div>
             <div class="row project-display"></div>
             <ul class="project-skill mt-2 list-unstyled"></ul>
