Adjust section center on mobile screen

--- a/home/static/css/about.css
+++ b/home/static/css/about.css
@@ -43,6 +43,10 @@
         padding: 0 0 0 0.7rem;
     }
 
+    a.skill{
+        color: var(--f-col-light);
+    }
+
     .skill::before{
     content: '';
     height: 5px;
