--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -14,7 +14,7 @@
                 </div>
                  <!--contact form-->
                 <div class="col-12 col-md-8 order-1 order-sm-1 order-md-2 mt-5">
-                    <p class="fs-5 text-uppercase fw-semibold">Got a Project?</p>
+                    <p class="fs-5 text-uppercase fw-semibold">Got a Project in mind?</p>
                     <div class="contact-form mb-5">
                         <form method="POST" action="{% url 'home' %}">
                             {% csrf_token %}
