--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load crispy_forms_tags %}
 <div class="container contact-content section-center">
     <div class="row">
@@ -6,6 +7,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 order-2 order-sm-2 order-md-1 contact">
                     <div>
+                        <img src="{% static 'images/flucent_developer_logo.png' %}" width="100" height="100" alt="logo">
                         <p><i class="fa-solid fa-location-dot me-2"></i>Berlin, Germany</p>
                         <p><i class="fa-solid fa-phone me-2"></i>(49) 17682052388</p>
                         <p><a href="mailto:ftogungbemi@gmail.com"><i class="fa-solid fa-envelope me-2"></i><span class="underline-hover-effect">ftogungbemi@gmail.com</span></a></p>
