--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -5,7 +5,7 @@
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that exhibits an amazing digital experience.</p>
+                    <p><span class="cursor" >&nbsp;</span><span class="typed-text"></span></p>
                 </div>
             </div>
             <div class="my-5">
