--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-12">
             <h2 class="text-center section-head">Portfolio</h2>
+            <div class="project-skill mt-2"></div>
             <div class="container projects mt-5"></div>
             <div class="row project-display"></div>
-            <ul class="project-skill mt-2 list-unstyled"></ul>
         </div>
     </div>
 </div>
