--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,7 @@ body{
     color: var(--f-col-light);
     min-height: 100vh;
     margin: 0 auto;
+    overflow-x: hidden !important;
 }
 
 header{
@@ -51,9 +52,10 @@ a{
 
 .section-center{
     min-height: 100vh;
-    display: flex;
+    display: grid;
+    place-items: center;
     justify-content: center;
-    align-items: center;
+    align-content: center;
 }
 
 /* ----button---- */
@@ -180,7 +182,7 @@ a{
 .top-nav-list > div{
     position: fixed;
     width: 100%;
-    min-height: 200vh;
+    min-height: 100vh;
     z-index: 98;
     top: 0;
     left: 100%;
@@ -194,7 +196,7 @@ a{
     left: 100%;
     width: 100%;
     z-index: 99;
-    min-height: 200vh;
+    min-height: 100vh;
     background-color: var(--f-col-dark);
     transition: left 0.3s ease;
 }
@@ -315,3 +317,95 @@ a{
         border: 1.5px dashed var(--f-col-grab);
     }
 }
+
+.page{
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+@media(prefers-reduced-motion){
+    .page{
+        transition: none;
+    }
+}
+
+.page.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+/* Pre-loader */
+
+.preload.start{
+    position: fixed;
+    background-color: #0a031a;
+    min-height: 110vh;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    justify-content: center;
+    align-content: center;
+    margin-top: -2rem;
+    z-index: 999999999;
+}
+
+.loading{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.flucent{
+    animation: slideDown 2s forwards;
+}
+
+.developer{
+    animation: slideLeft 1s forwards ;
+}
+
+.flucent.fade_out,
+.developer.fade_out{
+    filter: blur(5px);
+    transition: all 3s ease-in-out;
+}
+
+
+.preload.end{
+    display: none;
+    transition: all 3s ease-in-out;
+}
+
+@keyframes slideDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-500px);
+    }
+
+    80% {
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(250px);
+    }
+
+    80% {
+        transform: translateX(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}       
