--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
     </div>
 
     <!--Top Navigation-->
-    <header class="container-fluid">
+    <header class="container-fluid page-load">
         <nav id="top-nav" class="row py-3 mx-1">
             <div class="col-6">
                 <a href="{% url 'home' %}" class="text-decoration-none logo">
@@ -72,12 +72,12 @@
     {% endif %}
     </div>
 
-    <main>
+    <main class="page-load">
         {% block content %}
         {% endblock %}
     </main>
 
-    <footer class="d-flex justify-content-center p-2">
+    <footer class="page-load d-flex justify-content-center p-2">
         <a href="https://github.com/folarin-ogungbemi"
           target="_blank"
           rel="noopener"
@@ -90,26 +90,6 @@
     <script src="https://kit.fontawesome.com/b30d404726.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS CDN-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script>
-        const fadeOut = 2000;
-        const hide = 4000;
-        const flucent = document.querySelector('.flucent');
-        const developer = document.querySelector('.developer');
-
-        const preLoad = document.querySelector('.preload');
-        preLoad.classList.add('start');
-        document.body.style.overflow = 'hidden';
-
-        setTimeout(() => {
-            flucent.classList.add("fade_out");
-            developer.classList.add("fade_out");
-        }, fadeOut);
-        setTimeout(() => {
-            preLoad.classList.remove('start');
-            preLoad.classList.add("end");
-            document.body.style.overflow = 'scroll';
-        }, hide);
-    </script>
     {% block post_load_js %}
     {% endblock %}
 </body>
