Add resume to links

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="container about-content section-center">
     <div class="row">
         <div class="col-12 order-1">
@@ -12,7 +13,7 @@
             <p>This inspiration led to my first encounter with HTML & CSS. I have since then endeavoured to learn more. So far, I have worked with a number of technologies to better my development.</p>
             <p>Currently, I am undergoing a diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a> where i specialize in building e-commerce websites and using relevant technologies to effeciently process and present data. I continually develop applications and learn new technologies with the aim to improve my skills and to provide solutions to organizational challenges.</p>
             <span class="d-none d-md-block mb-3">Find out more about me</span>
-            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="#">Résumé</a>
+            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="{% static 'images/Folarin__Ogungbemi_-_Junior_Software_Developer__main.pdf' %}">Résumé</a>
         </div>
     </div>
 </div>
