--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     {% endblock %}
 
     {% block core_js %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/base.js' %}"></script>
     {% endblock %}
 
@@ -58,7 +59,7 @@
         </nav>
     </header>
 
-    <div class="container message">
+    <div class="container notification">
     {% if messages %}
         <div class="row">
             <div class="col-12">
@@ -92,5 +93,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     {% block post_load_js %}
     {% endblock %}
+    <script>
+        const notification = document.querySelector('.notification');
+        setTimeout(() => {
+            notification.classList.add('display');
+            }, 4200);
+        setTimeout(() => {
+            notification.classList.remove('display');
+            }, 7850);
+    </script>
 </body>
 </html>
