--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -9,11 +9,11 @@
             <div class="container technical-skills mt-2"></div>
         </div>
         <div class="col-12 col-md-8 mx-auto mt-3 about-me order-2 order-md-3">
-            <p>Hello! My name is Folarin Ogungbemi, an aspiring full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
+            <p>I am a full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
             <p>This inspiration led to my first encounter with HTML & CSS. I have since then endeavoured to learn more. So far, I have worked with a number of technologies to better my development.</p>
             <p>Currently, I am undergoing a diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a> where i specialize in building e-commerce websites and using relevant technologies to effeciently process and present data. I continually develop applications and learn new technologies with the aim to improve my skills and to provide solutions to organizational challenges.</p>
             <span class="d-none d-md-block mb-3">Find out more about me</span>
-            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="{% static 'images/Folarin__Ogungbemi_-_Junior_Software_Developer__main.pdf' %}">Résumé</a>
+            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="{% static 'images/resume.pdf' %}">Résumé<i class="fa-solid fa-download ps-1"></i></a>
         </div>
     </div>
 </div>
