Create Blog Model

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -30,7 +30,7 @@
     {% block core_extra_js %}
     {% endblock %}
 
-    <title>Flucent Developer |{% block extra_title %} Blog {% endblock %}</title>
+    <title>Flucent Developer |{% block extra_title %} {% endblock %}</title>
 </head>
 <body>
     <!--Top Navigation-->
