--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -34,9 +34,8 @@
 </head>
 <body>
     <!--Top Navigation-->
-    <header class="container-fluid">
-        <nav id="top-nav" class="row py-3 mx-1">
-        </nav>
+    <header class="container">
+        {% include 'includes/navbar.html' %}
     </header>
 
     <div class="container message">
@@ -71,6 +70,8 @@
     <script src="https://kit.fontawesome.com/b30d404726.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS CDN-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!--Particles.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     {% block post_load_js %}
     {% endblock %}
 </body>
