--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,16 +1,42 @@
 {% extends 'blog_base.html' %}
 {% load static %}
 
-
 {% block extra_css %}
 {% endblock %}
 
+{% block extra_title %} Blog {% endblock %}
+
 {% block content %}
-<section id="blog" class="container-fluid">
-    <div class="container section-center">
+<div class="container-fluid search-board">
+    <canvas class="background"></canvas>
+    <form class="search-area" method="POST" action="#">
+        {% csrf_token %}
+        <h2 class="text-light">Build your dream website.</h2>
+        <div class="search-container">
+            <input type="search" class="search form-control" placeholder="browse website">
+            <input type="submit" role="search" value="Search" class="search-button">
+        </div>
+    </form>
+</div>
+
+<section class="post_section">
+    <div class="container">
         <div class="row">
+            <!--Post area -->
             <div class="col-12">
-                testing this blog page
+                {% if posts %}
+                    <div class="container-fluid">
+                        <h3 class="text-center text-uppercase mt-3">recent blog posts</h3>
+                        <div class="row">
+                            <!-- post -->
+                            {% include 'includes/post.html' %}
+                        </div>
+                    </div>
+                    <!-- pagination -->
+                    {% include 'includes/paginator.html' %}
+                {% else %}
+                    <p class="text-center fs-2 fw-semibold mt-5">Hold on!<i class="ps-2 fa-solid fa-face-smile"></i></p>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -19,4 +45,5 @@
 
 {% block post_load_js %}
     {{ block.super }}
+    <script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
