Link Blog to page

--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -1,7 +1,7 @@
 <div class="container hero-content section-center">
     <div class="row">
         <div class="col-12">
-            <p>Hello, my name is</p>
+            <p>Hi, I am</p>
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
                 <div class="col-12 col-md-8">
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="my-5">
-                <a href="#projects" class="action-btn btn-hero">View my Projects</a>
+                <a href="https://folarin-ogungbemi.herokuapp.com/blog/" target="_blank" class="action-btn btn-hero">Visit my Blog</a>
             </div>
             <div class="hero-social-links d-none d-md-block"></div>
         </div>
