--- a/static/css/blog_base.css
+++ b/static/css/blog_base.css
@@ -21,6 +21,15 @@ body {
     width: 100%;
 }
 
+.navbar{
+    background-color: var(--col-pry);
+    --bs-navbar-toggler-focus-width: 0;
+}
+
+.navbar-toggler{
+    border: 0;
+}
+
 .top-navbar{
     background-color: var(--col-light);
     box-shadow: var(--box-shadow);
@@ -193,4 +202,42 @@ body {
 
 .post-content {
     width: 100%;
+}
+
+/*  *****************
+    SCROLL-BAR STYLE
+    *************** */
+
+    ::-webkit-scrollbar{
+        width: 0.6rem;
+    }
+    
+    ::-webkit-scrollbar-track{
+        background-color: var(--col-light);
+    }
+    
+    ::-webkit-scrollbar-thumb{
+        background-color:var(--col-sec);
+        border-radius: 100vw;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover{
+        background-color:var(--col-pry);
+    }
+
+/* *************
+    MEDIA-QUERIES
+**************** */
+
+@media screen and (max-width: 992px)  {
+    .navbar-brand{
+        margin-left: 1rem !important;
+    }
+    .nav-internal-links{
+        justify-content: start !important;
+        margin-left: 0.2rem;
+    }
+    .navbar-toggler{
+        margin-right: -1rem !important;
+    }
 }
