Setup media url on AWS

--- a/blog/templates/includes/post.html
+++ b/blog/templates/includes/post.html
@@ -1,28 +1,25 @@
 {% for post in posts %}
+{{ MEDIA_URL }}
   <div class="col-12 col-md-6 my-2">
     <div class="my-3 article-card">
       <small class="article-category">{{ post.categories.first }}</small>
-      <a href="{{ post.get_detail_absolute_url }}" class="d-flex justify-content-start">
-        {% if "placeholder" in post.image.url %}
-        <div class="#">
+      <a href="{{ post.get_detail_absolute_url }}" class="d-none d-md-flex justify-content-start">
+        {% if post.image.url %}
           <img
+          class="#"
+          width="170"
+          height="170"
+          src="{{ post.image.url }}"
+          alt="{{ post.title }} featured image"
+        />
+        {% else %}
+        <img
             class="#"
             width="170"
             height="170"
-            src="https://res.cloudinary.com/dzdyzl4r5/image/upload/v1679168303/default-mentor_dm35yd.png"
+            src="{{ MEDIA_URL }}"
             alt=" default image"
           />
-        </div>
-        {% else %}
-        <div class="">
-          <img
-            class="#"
-            width="170"
-            height="170"
-            src="{{ post.image.url }}"
-            alt="{{ post.title }} featured image"
-          />
-        </div>
         {% endif %}
       </a>
       <div class="container article-info">
