add footer privacy policy

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -57,12 +57,18 @@
         {% endblock %}
     </main>
 
-    <footer class="d-flex justify-content-center p-2">
+    <footer class="p-2 d-flex flex-wrap justify-content-between">
         <a href="https://github.com/folarin-ogungbemi"
           target="_blank"
           rel="noopener"
           aria-label="visit folarin's github page(open in a new tab)"
           class="nav-link d-inline"><small class="footer-nav"> &copy; 2023 Flucent Developer. All rights reserved <i class="fa-brands fa-github-alt ms-1"></i></small>
+        </a>
+        <a href="#"
+          target="_blank"
+          rel="noopener"
+          aria-label="page private policy"
+          class="nav-link"><small class="footer-nav">Privacy policy</small>
         </a>
     </footer>
 
