add comment form

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -13,7 +13,7 @@
         {% csrf_token %}
         <h2 class="text-light">Build your dream website.</h2>
         <div class="search-container">
-            <input type="search" class="search form-control" placeholder="browse website">
+            <input type="search" class="search form-control" placeholder="Browse website">
             <input type="submit" role="search" value="Search" class="search-button">
         </div>
     </form>
