--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -57,7 +57,7 @@
         {% endblock %}
     </main>
 
-    <footer class="p-2 d-flex flex-wrap justify-content-between">
+    <footer class="p-2 d-flex flex-wrap-reverse justify-content-between">
         <a href="https://github.com/folarin-ogungbemi"
           target="_blank"
           rel="noopener"
