--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog_base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block extra_css %}
 {% endblock %}
@@ -17,9 +18,9 @@
             <nav class="table_of_content my-5">
                 <p class="py-2 toc">Table of Content</p>
                 <ul class="list-unstyled">
-                    <li class="toc-link"><a class="text-decoration-none action-link" href="#intro">intro</a></li>
-                    <li class="toc-link"><a class="text-decoration-none action-link" href="#body">body</a></li>
-                    <li class="toc-link"><a class="text-decoration-none action-link" href="#conclusion">conclusion</a></li>
+                    <li class="toc-link"><a class="text-decoration-none action-link" href="#1">What is Django?</a></li>
+                    <li class="toc-link"><a class="text-decoration-none action-link" href="#2">Why Use Django?</a></li>
+                    <li class="toc-link"><a class="text-decoration-none action-link" href="#3">Steps in setting up Django</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,17 +36,19 @@
                         </div>
                     </div>
                 </div>
-                <p class="py-5 text-center text-muted">{{ post.excerpt }}</p>
-                <nav class="d-block d-md-none">
-                    <ul class="list-unstyled d-flex justify-content-around flex-wrap">
-                        <li class="toc-link"><a class="text-decoration-none action-link" href="#intro">intro</a></li>
-                        <li class="toc-link"><a class="text-decoration-none action-link" href="#body">body</a></li>
-                        <li class="toc-link"><a class="text-decoration-none action-link" href="#conclusion">conclusion</a></li>
-                    </ul>
-                </nav>
+                <p class="my-5 text-center text-muted">{{ post.excerpt }}</p>
                 <p>{{ post.content | safe }}</p>
+                <div class="row">
+                    <div class="col-12 comment-area">
+                        <form method="POST" action="add_post.html">
+                            {% csrf_token %}
+                            {{ comment_form|crispy }}
+                            <input type="submit" value="Send" class="action-btn" name="comment-form">
+                        </form>
+                    </div>
+                </div>
                 {% if request.user.is_superuser %}
-                    <div class="d-flex gap-3">
+                    <div class="d-flex gap-3 my-5">
                         <a href="{{ post.get_update_absolute_url }}" class="text-info"> Update</a>
                         <a href="{{ post.get_delete_absolute_url }}" class="text-danger"> Delete</a>
                     </div>
@@ -56,10 +59,10 @@
 </section>
 <ul class="list-unstyled post-attach">
     <li class="like-box">
-        <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+        <a href="#" class="text-decoration-none"><small class="pe-1 text-muted">123</small><i class="fa-solid fa-thumbs-up"></i></a>
     </li>
     <li class="comment-box">
-        <a href="#"><i class="fa-solid fa-comment"></i></a>
+        <a href="#" class="text-decoration-none"><small class="pe-1 text-muted">1</small><i class="fa-solid fa-comment"></i></a>
     </li>
 </ul>
 {% endblock %}
