Add privacy policy

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,12 +78,18 @@
         {% endblock %}
     </main>
 
-    <footer class="page-load d-flex justify-content-center p-2">
+    <footer class="page-load p-2 d-flex flex-wrap-reverse justify-content-between">
         <a href="https://github.com/folarin-ogungbemi"
           target="_blank"
           rel="noopener"
           aria-label="visit folarin's github page(open in a new tab)"
           class="nav-link d-inline"><small class="footer-nav">Designed &amp; Created by Folarin Ogungbemi <i class="fa-brands fa-github-alt ms-1"></i></small>
+        </a>
+        <a href="https://www.privacypolicygenerator.info/live.php?token=zqqf6PkK0Z7FcPaCmLg5qNjQrSaRX0RN"
+          target="_blank"
+          rel="noopener"
+          aria-label="page private policy"
+          class="nav-link"><small class="footer-nav">Privacy policy</small>
         </a>
     </footer>
 
