--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -64,7 +64,7 @@
           aria-label="visit folarin's github page(open in a new tab)"
           class="nav-link d-inline"><small class="footer-nav"> &copy; 2023 Flucent Developer. All rights reserved <i class="fa-brands fa-github-alt ms-1"></i></small>
         </a>
-        <a href="#"
+        <a href="https://www.privacypolicygenerator.info/live.php?token=zqqf6PkK0Z7FcPaCmLg5qNjQrSaRX0RN"
           target="_blank"
           rel="noopener"
           aria-label="page private policy"
