--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -29,17 +29,17 @@
                                     </li>
                                 </ul>
                                 <!-- User Authentication Mobile-->
-                                <ul class=" list-unstyled d-block d-lg-none">
+                                <ul class=" list-unstyled d-block d-lg-none gap-2">
                                     {% if user.is_authenticated %}
                                         <li class="nav-item">
-                                            <a class="nav-link f-link" href="#">Logout</a>
+                                            <a class="nav-link action-link" href="{% url 'account_logout' %}">Logout</a>
                                         </li>
                                     {% else %}
                                         <li class="nav-item">
-                                            <a class="nav-link f-link" href="#">Sign Up</a>
+                                            <a class="nav-link action-link" href="{% url 'account_signup' %}">Sign Up</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link f-link" href="#">Login</a>
+                                            <a class="nav-link action-link" href="{% url 'account_login' %}">Login</a>
                                         </li>
                                     {% endif %}
                                 </ul>
@@ -50,14 +50,14 @@
                                 <!-- User Authentication -->
                                 {% if user.is_authenticated %}
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Logout</a>
+                                        <a class="nav-link action-link" href="{% url 'account_logout' %}">Logout</a>
                                     </li>
                                 {% else %}
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Sign Up</a>
+                                        <a class="nav-link action-link" href="{% url 'account_signup' %}">Sign Up</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Login</a>
+                                        <a class="nav-link action-link" href="{% url 'account_login' %}">Login</a>
                                     </li>
                                 {% endif %}
                             </ul>
