--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,12 +3,27 @@
 :root{
     /* typograpyh */
     --fs-xl: clamp(2rem, 8vw, 4rem);
+    /* Dark mode variables */
+    --bg-color: #0a031a;
+    --text-color: #fff;
     /* colors */
     --f-col-dark: #0a031a;
     --f-col-grab: #ED5959;
     --f-col-light: #fff;
     /* transition */
     --trans-ease: all 0.5s ease-in-out;
+}
+
+/* Light mode variables */
+[data-theme="light"] {
+    --bg-color: #fff;
+    --text-color: #0a031a;
+}
+
+#theme-toggle{
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
 }
 
 /* General */
@@ -23,8 +38,8 @@
 }
 
 body{
-    background-color: var(--f-col-dark);
-    color: var(--f-col-light);
+    background-color: var(--bg-color);
+    color: var(--text-color);
     min-height: 100svh;
     margin: 0 auto;
     overflow-x: hidden !important;
@@ -36,7 +51,7 @@ header{
     left: 0;
     min-height: 5svh;
     z-index: 999;
-    background-color: rgba(10, 3, 26, 0.9);
+    background-color: var(--bg-color);
     backdrop-filter: blur(30px);
 }
 
@@ -99,7 +114,7 @@ a{
 }
 
 .social-icon{
-    color: var(--f-col-light);
+    color: var(--text-color);
 }
 
 .social-icons .social-icon:hover {
@@ -114,11 +129,11 @@ a{
 
 #top-nav{
     align-items: center;
-    color: var(--f-col-light);
+    color: var(--text-color);
 }
 
 #top-nav a.logo{
-    color: var(--f-col-light);
+    color: var(--text-color);
 }
 
 .nav-list{
@@ -155,7 +170,7 @@ a{
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: var(--f-col-light);
+    background-color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -168,7 +183,7 @@ a{
     content: '';
     position: absolute;
     top: -10px;
-    background-color: var(--f-col-light);
+    background-color: var(--text-color);
     width: 70%;
     height: 2px;
 }
@@ -196,7 +211,7 @@ a{
     width: 100%;
     z-index: 99;
     min-height: 100vh;
-    background-color: var(--f-col-dark);
+    background-color: var(--bg-color);
     transition: left 0.3s ease;
 }
 
@@ -262,7 +277,7 @@ a{
 }
 
 .contact-message{
-    background-color: var(--f-col-dark);
+    background-color: var(--bg-color);
     width: fit-content;
     padding: 1rem;
     border-radius: 5px;
@@ -279,7 +294,7 @@ a{
 }
 
 ::-webkit-scrollbar-track{
-    background-color: var(--f-col-dark);
+    background-color: var(--bg-color);
 }
 
 ::-webkit-scrollbar-thumb{
@@ -288,10 +303,10 @@ a{
 }
 
 ::-webkit-scrollbar-thumb:hover{
-    background-color:var(--f-col-light);
+    background-color:var(--text-color);
 }
 
-@supports (scrollbar-color: var(--f-col-grab), var(--f-col-dark)){
+@supports (scrollbar-color: var(--f-col-grab), var(--bg-color)){
     *{
         scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
         scrollbar-width: thin;
@@ -316,8 +331,8 @@ a{
     }
 
     .contact-message{
-        background-color: var(--f-col-dark);
-        color: var(--f-col-light);
+        background-color: var(--bg-color);
+        color: var(--text-color);
         padding: 0.25rem;
         border: 1.5px dashed var(--f-col-grab);
     }
@@ -346,7 +361,7 @@ a{
 
 .preload.start{
     position: fixed;
-    background-color: #0a031a;
+    background-color: var(--bg-color);
     min-height: 100svh;
     width: 100%;
     display: grid;
