--- a/blog/templates/blog/Admin/update_post.html
+++ b/blog/templates/blog/Admin/update_post.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-12 col-md-8 post mx-auto">
             <h3 class="text-center my-5">Update post</h3>
-            <form action="{{ post.get_update_absolute_url }}" method="POST">
+            <form action="{{ post.get_update_absolute_url }}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-12">
