--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -30,7 +30,7 @@
                     <div class="col-12 d-flex gap-3">
                         <img class="profile-img" width="100" height="100" src="https://res.cloudinary.com/dzdyzl4r5/image/upload/v1680209621/Profile-img_celtty.png" alt="profile pic">
                         <div class="d-flex flex-column justify-content-center">
-                            <small class="fw-semibold">{{ post.author }}</small>
+                            <small class="fw-semibold">By {{ post.author }}</small>
                             <small>full-stack Software Developer</small>
                             <small>{{ post.updated_date }}</small>
                         </div>
@@ -49,9 +49,9 @@
                         <form method="POST">
                             {% csrf_token %}
                             {{ comment_form|crispy }}
-                            <input type="submit" value="Send" class="action-btn" name="comment-form">
+                            <input type="submit" value="Submit" class="action-btn" name="comment-form">
                         </form>
-                        <div class="comments my-5">
+                        <div id="comments" class="my-5">
                             <h4>Comments</h4>
                             <div class="row">
                                 {% for comment in comments %}
@@ -75,10 +75,10 @@
 </section>
 <ul class="list-unstyled post-attach">
     <li class="like-box">
-        <a href="#" class="text-decoration-none"><small class="pe-1 text-muted">123</small><i class="fa-solid fa-thumbs-up"></i></a>
+        <a href="#" class="text-decoration-none action-link"><small class="pe-1 text-muted">123</small><i class="fa-solid fa-thumbs-up"></i></a>
     </li>
     <li class="comment-box">
-        <a href="#" class="text-decoration-none"><small class="pe-1 text-muted">1</small><i class="fa-solid fa-comment"></i></a>
+        <a href="#comments" class="text-decoration-none action-link"><small class="pe-1 text-muted">1</small><i class="fa-solid fa-comment"></i></a>
     </li>
 </ul>
 {% endblock %}
