Modify post image

--- a/blog/templates/includes/post.html
+++ b/blog/templates/includes/post.html
@@ -16,7 +16,7 @@
             class="#"
             width="170"
             height="170"
-            src="{{ MEDIA_URL }}"
+            src="https://res.cloudinary.com/dzdyzl4r5/image/upload/v1679168303/default-mentor_dm35yd.png"
             alt=" default image"
           />
         {% endif %}
